force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Responsabilidade__c.field-meta.xml
<CustomField>
    <fullName>Responsabilidade__c</fullName>
    <label>Responsabilidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>