force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ResponsabilidadeA2__c.field-meta.xml
<CustomField>
    <fullName>ResponsabilidadeA2__c</fullName>
    <label>Responsabilidade A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>