force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/ResponsabilidadeA3__c.field-meta.xml
<CustomField>
    <fullName>ResponsabilidadeA3__c</fullName>
    <label>Responsabilidade A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>