force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/TecnicaIndividual__c.field-meta.xml
<CustomField>
    <fullName>TecnicaIndividual__c</fullName>
    <label>Técnica Individual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>