force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/TecnicaIndividualA2__c.field-meta.xml
<CustomField>
    <fullName>TecnicaIndividualA2__c</fullName>
    <label>Técnica Individual A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>