force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/TecnicaIndividualA3__c.field-meta.xml
<CustomField>
    <fullName>TecnicaIndividualA3__c</fullName>
    <label>Técnica Individual A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>