force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Tipo_de_Avaliacao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Avaliacao__c</fullName>
    <label>Tipo de Avaliação</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnóstica</fullName>
            </value>
            <value>
                <fullName>Formativa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>