force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/TipodeAvaliacaoA3__c.field-meta.xml
<CustomField>
    <fullName>TipodeAvaliacaoA3__c</fullName>
    <label>Tipo de Avaliação A3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formativa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>