force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Tomada_de_decisao__c.field-meta.xml
<CustomField>
    <fullName>Tomada_de_decisao__c</fullName>
    <label>Tomada de decisão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>