force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/TomadadedecisaoA2__c.field-meta.xml
<CustomField>
    <fullName>TomadadedecisaoA2__c</fullName>
    <label>Tomada de decisão A2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>