force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/TomadadeDecisaoA3__c.field-meta.xml
<CustomField>
    <fullName>TomadadeDecisaoA3__c</fullName>
    <label>Tomada de decisão A3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>