force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/fields/Turma__c.field-meta.xml
<CustomField>
    <fullName>Turma__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Turma</label>
    <referenceTo>Turma__c</referenceTo>
    <relationshipLabel>Avaliações Esportivas e Socioemocionais</relationshipLabel>
    <relationshipName>Avaliacoes_Esportivas_e_Socioemocionais</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>