force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/recordTypes/Esportivo.recordType-meta.xml
<RecordType>
    <fullName>Esportivo</fullName>
    <active>true</active>
    <label>Esportivo</label>
</RecordType>