force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/recordTypes/Socioemocional.recordType-meta.xml
<RecordType>
    <fullName>Socioemocional</fullName>
    <active>true</active>
    <label>Socioemocional</label>
</RecordType>