force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Tipo_de_Avaliacao__c</columns>
    <columns>Periodo_de_Avaliacao__c</columns>
    <columns>Turma__c</columns>
    <columns>Aluno__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>