force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/listViews/AvaliacoesEsportivas.listView-meta.xml
<ListView>
    <fullName>AvaliacoesEsportivas</fullName>
    <columns>NAME</columns>
    <columns>Turma__c</columns>
    <columns>Aluno__c</columns>
    <columns>NotaEsportivaA1__c</columns>
    <columns>NotaEsportiva_A2__c</columns>
    <columns>NotaEsportivaA3__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AvaliacaoEsportivaSocioemocional__c.Esportivo</value>
    </filters>
    <label>Avaliações Esportivas</label>
</ListView>