force-app/main/default/objects/AvaliacaoEsportivaSocioemocional__c/listViews/AvaliacoesSocioemocionais.listView-meta.xml
<ListView>
    <fullName>AvaliacoesSocioemocionais</fullName>
    <columns>NAME</columns>
    <columns>Ano_Base_Socioemocional__c</columns>
    <columns>Turma__c</columns>
    <columns>Aluno__c</columns>
    <columns>AprovacaoAcademica__c</columns>
    <columns>NivelSocioemocionalDoAluno__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AvaliacaoEsportivaSocioemocional__c.Socioemocional</value>
    </filters>
    <label>Avaliações Socioemocionais</label>
</ListView>